--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div id="outer">
-<header><div id="header-container"><div id="head-inner"><h1>あなたのＨＰタイトル</h1>
-<p class="description">あなたのＨＰの説明文</p></div></div>
+<header><div id="header-container"><div id="head-inner"><h1>Masatomo Torikai (鳥飼将雅)</h1>
+<p class="description">I am an Associate Professor at the University of Osaka, Japan. </p></div></div>
 </header>
 <div id="content-wrapper">
 <main>
