--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <div id="content-wrapper">
 <main>
 <div id="inner">
-<h2>記事ページ見出し・大</h2>
-<p>文章あれこれ</p>
-<h3>記事ページ見出し・中</h3>
-<p>文章あれこれ</p>
-<h4>記事ページ見出し・小</h4>
-<p>文章あれこれ</p>
+<h2>CV</h2>
+<p>
+  My CV is <a href="https://www.dropbox.com/scl/fi/5dc5bzscqbvm046du5y5b/CV-March_2024-_Torikai.pdf?rlkey=scmh161v33r1r9jdz8kexilt5&st=2kdngtsq&dl=0" target="_blank"><b>
+              here</b>
+          </a>.
+</p>
 </div>
 </main>
 <aside>
