--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Your Name | Affiliation</title>
 	<meta name="description" content="Researcher homepage: interests, publications, teaching, contact." />
-	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
