--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 	<header class="site-header">
 		<div class="container header-inner">
 			<div class="brand">
-				<a href="#" class="name">Masatomo Torikai</a>
-				<div class="meta">The University of Osaka (Japan) / Associate Professor</div>
+				<img src="photo_main.jpg" alt="Masatomo Torikai" class="profile-photo" />
+
+  				<div class="brand-text">
+    				<a href="#" class="name">Masatomo Torikai</a>
+    				<div class="meta">The University of Osaka (Japan) / Associate Professor</div>
+  				</div>
 			</div>
 
 			<nav aria-label="Site">
