--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header class="site-header">
 		<div class="container header-inner">
 			<div class="brand">
-				<img src="photo_main.jpg" alt="Masatomo Torikai" class="profile-photo" />
+				<img src="photo_main.JPG" alt="Masatomo Torikai" class="profile-photo" />
 
   				<div class="brand-text">
     				<a href="#" class="name">Masatomo Torikai</a>
