--- a/index.html
+++ b/index.html
@@ -37,17 +37,28 @@
 
 	<main id="main" class="container">
 		<section class="hero">
-			<h1>Masatomo Torikai</h1>
-			<p class="lead">
-				I am studying subnational politics, party politics, and elections in authoritarian regimes.
-			</p>
-			<p class="links">
-				<a href="https://www.dropbox.com/scl/fi/5dc5bzscqbvm046du5y5b/CV-March_2024-_Torikai.pdf?rlkey=scmh161v33r1r9jdz8kexilt5&st=2kdngtsq&dl=0">CV (PDF)</a>
-				<span class="dot">•</span>
-				<a href="https://scholar.google.com/citations?user=5gBqi98AAAAJ&hl=en">Google Scholar</a>
-				<span class="dot">•</span>
-				<a href="https://orcid.org/">ORCID</a>
-			</p>
+  			<div class="hero-inner">
+
+    		<img src="images/profile.jpg"
+         		alt="Masatomo Torikai"
+         		class="hero-photo" />
+
+    		<div class="hero-text">
+      			<h1>Masatomo Torikai</h1>
+      			<p class="lead">
+        		I study subnational politics, party politics, and elections in authoritarian regimes.
+      			</p>
+
+      			<p class="links">
+        			<a href="https://www.dropbox.com/...">CV (PDF)</a>
+        			<span class="dot">•</span>
+        			<a href="https://scholar.google.com/...">Google Scholar</a>
+        			<span class="dot">•</span>
+        			<a href="https://orcid.org/">ORCID</a>
+      				</p>
+    			</div>
+
+  			</div>
 		</section>
 
 		<section id="about" class="section">
