--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<section class="hero">
   			<div class="hero-inner">
 
-    		<img src="images/profile.jpg"
+    		<img src="photo_main.JPG"
          		alt="Masatomo Torikai"
          		class="hero-photo" />
 
