--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
 	<header class="site-header">
 		<div class="container header-inner">
 			<div class="brand">
-				<img src="photo_main.JPG" alt="Masatomo Torikai" class="profile-photo" />
-
-  				<div class="brand-text">
-    				<a href="#" class="name">Masatomo Torikai</a>
-    				<div class="meta">The University of Osaka (Japan) / Associate Professor</div>
-  				</div>
+				<a href="#" class="name">Masatomo Torikai</a>
+				<div class="meta">The University of Osaka (Japan) / Associate Professor</div>
 			</div>
 
 			<nav aria-label="Site">
@@ -37,38 +33,33 @@
 
 	<main id="main" class="container">
 		<section class="hero">
-  			<div class="hero-inner">
-
-    		<img src="photo_main.JPG"
-         		alt="Masatomo Torikai"
-         		class="hero-photo" />
-
-    		<div class="hero-text">
-      			<h1>Masatomo Torikai</h1>
-      			<p class="lead">
-        		I study subnational politics, party politics, and elections in authoritarian regimes.
-      			</p>
-
-      			<p class="links">
-        			<a href="https://www.dropbox.com/...">CV (PDF)</a>
-        			<span class="dot">•</span>
-        			<a href="https://scholar.google.com/...">Google Scholar</a>
-        			<span class="dot">•</span>
-        			<a href="https://orcid.org/">ORCID</a>
-      				</p>
-    			</div>
-
-  			</div>
+			<h1>Masatomo Torikai</h1>
+			<p class="lead">
+				I am studying subnational politics, party politics, and elections in authoritarian regimes.
+			</p>
+			<p class="links">
+				<a
+					href="https://www.dropbox.com/scl/fi/5dc5bzscqbvm046du5y5b/CV-March_2024-_Torikai.pdf?rlkey=scmh161v33r1r9jdz8kexilt5&st=2kdngtsq&dl=0">CV
+					(PDF)</a>
+				<span class="dot">•</span>
+				<a href="https://scholar.google.com/citations?user=5gBqi98AAAAJ&hl=en">Google Scholar</a>
+				<span class="dot">•</span>
+				<a href="https://orcid.org/">ORCID</a>
+			</p>
 		</section>
 
 		<section id="about" class="section">
 			<h2>About</h2>
 			<p>
-				My research focuses on elite behavior in authoritarian regimes, such as electoral mobilization, career choices, and
-				political representation. Although I have mainly worked on political processes in Russia and Ukraine, I am interested in
-				politics in non-democratic countries in general. My book project focuses on the triadic relationship between central,
-				regional, and local governments during centralization, based on the analysis of political processes in post-1991 Russia.
-				
+				My research focuses on elite behavior in authoritarian regimes, such as electoral mobilization, career
+				choices, and
+				political representation. Although I have mainly worked on political processes in Russia and Ukraine, I
+				am interested in
+				politics in non-democratic countries in general. My book project focuses on the triadic relationship
+				between central,
+				regional, and local governments during centralization, based on the analysis of political processes in
+				post-1991 Russia.
+
 				I have conducted fieldwork in Ukraine (2015), Russia (2017, 2018, 2019), and Moldova (2024).
 			</p>
 		</section>
@@ -85,16 +76,80 @@
 		<section id="pubs" class="section">
 			<h2>Publications</h2>
 
-			<h3>Peer-reviewed</h3>
-			<ol class="publist">
-				<li>
-					<span class="pub-authors">Your Name</span>.
-					<span class="pub-year">(2026)</span>.
-					<span class="pub-title">“Article Title.”</span>
-					<span class="pub-venue"><em>Journal Name</em></span>.
-					<a class="pub-link" href="#">DOI/Link</a>
-				</li>
-			</ol>
+<h3>Peer-reviewed</h3>
+
+<ol class="publist">
+	<li class="pubitem">
+		<div class="pubrow">
+			<span class="pub-authors">Torikai, Masatomo</span>.
+			<span class="pub-year">(2019)</span>.
+			<a class="pub-title" href="https://doi.org/10.1080/1060586X.2019.1589683" target="_blank" rel="noopener">
+				The electoral logic of governor rotations in Ukraine: Rulers’ authority, party strength, and regional
+				polarization
+			</a>.
+			<span class="pub-venue"><em>Post-Soviet Affairs</em>, 35(3), 258–276</span>.
+			<a class="pub-link" href="https://doi.org/10.1080/1060586X.2019.1589683" target="_blank"
+				rel="noopener">DOI</a>
+		</div>
+
+		<button class="accordion" type="button" aria-expanded="false">
+      Abstract <span class="arrow">▾</span>
+    </button>
+		<div class="panel">
+			<p>
+				<!-- ここにAbstractを貼ってください -->
+			</p>
+		</div>
+	</li>
+
+	<li class="pubitem">
+		<div class="pubrow">
+			<span class="pub-authors">Torikai, Masatomo</span>.
+			<span class="pub-year">(2023)</span>.
+			<a class="pub-title" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank" rel="noopener">
+				Growing localization and fragmentation of patronal politics: Ukrainian local elections since 2010
+			</a>.
+			<span class="pub-venue"><em>Eurasian Geography and Economics</em>, 64(3), 296–321</span>.
+			<a class="pub-link" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank"
+				rel="noopener">DOI</a>
+		</div>
+
+		<button class="accordion" type="button" aria-expanded="false">
+      Abstract <span class="arrow">▾</span>
+    </button>
+		<div class="panel">
+			<p>
+				brah brah brah brah 
+			</p>
+		</div>
+	</li>
+</ol>
+
+	<h3 style="color:#0A758F;">
+		How FDI Reshapes Host Markets' Trade Profile and Politics
+	</h3>
+	
+	<p>
+		<strong>
+	    (with In Song Kim and Steven Liao. 2025.
+	    <a href="https://doi.org/10.1111/ajps.70010">
+	      <i>American Journal of Political Science</i>
+	    </a>)
+	  </strong>
+	</p>
+	
+	<button class="accordion">
+	  Abstract
+	  <span class="arrow">▾</span>
+	</button>
+	
+	<div class="panel">
+		<p>
+			A fast-growing literature indicates that firms' engagement in foreign
+			direct investment (FDI) and trade is key to understanding deepening
+			global value chains and their political implications. ...　
+		</p>
+	</div>
 
 			<h3>Working papers</h3>
 			<ol class="publist">
