--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 		<div class="container header-inner">
 			<div class="brand">
 				<a href="#" class="name">Masatomo Torikai</a>
-				<div class="meta">The University of Osaka (Japan) / Associate Professor</div>
 			</div>
 
 			<nav aria-label="Site">
-				<ul class="nav">
-					<li><a href="#about">About</a></li>
-					<li><a href="#research">Research</a></li>
-					<li><a href="#pubs">Publications</a></li>
-					<li><a href="#teaching">Teaching</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
+  				<ul class="nav">
+    				<li><a href="index.html">Home</a></li>
+    				<li><a href="research.html">Research</a></li>
+    				<li><a href="book-project.html">Book Project</a></li>
+    				<li><a href="publications.html">Publications</a></li>
+    				<li><a href="contact.html">Contact</a></li>
+					<li><a href="research.html">日本語</a></li>
+  				</ul>
 			</nav>
 		</div>
 	</header>
@@ -42,7 +42,7 @@
     			<div class="hero-text">
       				<h1>Masatomo Torikai</h1>
       				<p class="lead">
-        			I study subnational politics, party politics, and elections in authoritarian regimes.
+        			Associate Professor, Graduate School of Law and Politics, the University of Osaka (Japan)
       				</p>
 
       				<p class="links">
