--- a/research.html
+++ b/research.html
@@ -29,14 +29,43 @@
 	<main id="main" class="container">
   <section class="hero">
     <h1>Research</h1>
-    <p class="lead">My research focuses on ...</p>
   </section>
 
   <section class="section">
     <h2>Publications</h2>
 
     <h3>Peer-reviewed</h3>
-    <ol class="publist">
+    <ol class="publist" reversed>
+								<li class="pubitem">
+					<div class="pubrow">
+						<span class="pub-authors">Torikai, Masatomo</span>.
+						<span class="pub-year">(2023)</span>.
+						<a class="pub-title" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank"
+							rel="noopener">
+							Growing localization and fragmentation of patronal politics: Ukrainian local elections since
+							2010
+						</a>.
+						<span class="pub-venue"><b><em>Eurasian Geography and Economics</em></b>, 64(3), 296–321</span>.
+					</div>
+
+					<button class="accordion" type="button" aria-expanded="false">
+      Abstract <span class="arrow">▾</span>
+    </button>
+					<div class="panel">
+						<p>
+							Ukraine’s 2020 local elections showed a radical transformation of the party system through the proliferation of local parties. 
+While extant studies have examined the gradual nationalization of the party system, the rapid increase in party system localization, as observed in present-day Ukraine, has rarely been discussed. 
+Combining qualitative evidence on the 2010s’ political processes and quantitative evidence from data analysis of Ukraine’s local election results in 2010, 2015, and 2020, this study demonstrates that party system localization was caused by influential mayors who rapidly accumulated power after the Euromaidan. 
+This increase in mayoral authority has three main causes. 
+First, institutional settings such as popular mayoral elections and the relative autonomy of city governments in the state structure provide mayors with unique powers at odds with other regional actors, such as the governors. 
+Second, the decentralization reform initiated after the Euromaidan empowered mayors and city governments. 
+Finally, Volodymyr Zelens’kyi’s recruitment pattern of governors and his party Servant of the People’s candidate selection process enabled mayors to cultivate their local power bases. 
+This study offers an important implication for the idea of patronalism by indicating the geographical fragmentation of patronal politics.
+						</p>
+					</div>
+				</li>
+			
+		
 				<li class="pubitem">
 					<div class="pubrow">
 						<span class="pub-authors">Torikai, Masatomo</span>.
@@ -47,9 +76,7 @@
 							regional
 							polarization
 						</a>.
-						<span class="pub-venue"><em>Post-Soviet Affairs</em>, 35(3), 258–276</span>.
-						<a class="pub-link" href="https://doi.org/10.1080/1060586X.2019.1589683" target="_blank"
-							rel="noopener">DOI</a>
+						<span class="pub-venue"><b><em>Post-Soviet Affairs</em></b>, 35(3), 258–276</span>.
 					</div>
 
 					<button class="accordion" type="button" aria-expanded="false">
@@ -57,38 +84,21 @@
     </button>
 					<div class="panel">
 						<p>
-							<!-- ここにAbstractを貼ってください -->
-						</p>
-					</div>
-				</li>
-
-				<li class="pubitem">
-					<div class="pubrow">
-						<span class="pub-authors">Torikai, Masatomo</span>.
-						<span class="pub-year">(2023)</span>.
-						<a class="pub-title" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank"
-							rel="noopener">
-							Growing localization and fragmentation of patronal politics: Ukrainian local elections since
-							2010
-						</a>.
-						<span class="pub-venue"><em>Eurasian Geography and Economics</em>, 64(3), 296–321</span>.
-						<a class="pub-link" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank"
-							rel="noopener">DOI</a>
-					</div>
-
-					<button class="accordion" type="button" aria-expanded="false">
-      Abstract <span class="arrow">▾</span>
-    </button>
-					<div class="panel">
-						<p>
-							brah brah brah brah
+							How and under what conditions do authoritarian rulers use the state apparatus to help ensure victory? 
+							To answer this question, this paper examines electoral mobilization as a rationale for the appointment of governors in hybrid regimes. 
+							Given their absolute authority to use administrative resources, autocratic rulers prefer governors who can perform well in mobilizing the electorate in their favor. 
+							However, several circumstances make this strategy suboptimal or impossible. 
+							To provide empirical evidence supporting this argument, this study conducts a survival analysis using an original dataset of gubernatorial appointments and dismissals in Ukraine from 1996 to 2017. The results confirm that electoral performance was the primary driver of governor appointments during the presidency of Leonid Kuchma. 
+							In addition, it is demonstrated that various institutional conditions, such as party strength, the weak authority of the ruler within the central government, and regional polarization resulted in the adoption of different appointment strategies by subsequent presidents.
 						</p>
 					</div>
 				</li>
 			</ol>
 
+
+
     <h3>Working papers</h3>
-			<ol class="publist">
+			<ol class="publist" reverse>
 				<li>
 					<span class="pub-title">“Working Paper Title.”</span>
 					<span class="muted">Under review.</span>
