--- a/research.html
+++ b/research.html
@@ -33,9 +33,8 @@
 		</section>
 
 		<section class="section">
-			<h2>Publications</h2>
+			<h2>Peer-reviewed Articles</h2>
 
-			<h3>Peer-reviewed</h3>
 			<ol class="publist" reversed>
 		<li class="pubitem">
 			<div class="pubrow">
@@ -181,7 +180,7 @@
 
 
 
-			<h3>Working papers</h3>
+			<h2>Working papers</h2>
 			<ol class="publist" reversed>
 		<li class="pubitem">
 			<div class="pubrow">
