--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 						</a>
 
 			    <a href="https://scholar.google.com/citations?user=5gBqi98AAAAJ&hl=en" aria-label="Google Scholar">
-				    <i class="ai ai-google-scholar"></i>
+				    <i class="ai ai-google-scholar ai-2x"></i>
 			    </a>
 					
 		<a href="https://orcid.org/0000-0002-8615-6051" aria-label="ORCID">
-			<i class="ai ai-orcid"></i>
+			<i class="ai ai-orcid ai-2x"></i>
 		</a>
 					
 					</p>
