--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 
 				I have conducted fieldwork in Ukraine (2015), Russia (2017, 2018, 2019), and Moldova (2024).
 			</p>
+			<p>
+				『ロシア政治』の参考資料については<b><a href='https://www.dropbox.com/scl/fi/tkju1z3hzm8jdvwg3rsoy/_-_20250522.pdf?rlkey=o0ibmjcqwzxrzfvmybn6lg80p&e=1&st=me6fpitm&dl=0'>こちら</a></b>
+			</p>
 		</section>
 
 
