--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li><a href="research.html">Research</a></li>
 					<li><a href="book-project.html">Book Project</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="research.html">日本語</a></li>
+					<li><a href="japanese.html">日本語</a></li>
 				</ul>
 			</nav>
 		</div>
