--- a/japanese.html
+++ b/japanese.html
@@ -36,16 +36,16 @@
 	<header class="site-header">
 		<div class="container header-inner">
 			<div class="brand">
-				<a href="index.html" class="name">Masatomo Torikai</a>
-				<div class="meta">Osaka University / Associate Professor</div>
+				<a href="#" class="name">Masatomo Torikai</a>
 			</div>
 
 			<nav aria-label="Site">
 				<ul class="nav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="index.html#research">Research</a></li>
-					<li><a class="is-active" href="japanese.html">日本語</a></li>
+					<li><a href="research.html">Research</a></li>
+					<li><a href="book-project.html">Book Project</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="japanese.html">日本語</a></li>
 				</ul>
 			</nav>
 		</div>
