--- a/japanese.html
+++ b/japanese.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>日本語 | Masatomo Torikai</title>
 	<meta name="description" content="鳥飼将雅（Masatomo Torikai）の日本語ページ：経歴、研究関心、著書、論文等。" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="index.css" />
 </head>
 
@@ -53,12 +56,6 @@
 
 	<main id="main" class="container jp-page">
 
-		<section class="hero">
-			<h1>日本語</h1>
-			<p class="lead">
-				経歴・研究関心・著書・論文などの情報をまとめています。
-			</p>
-		</section>
 
 		<section class="section" id="bio">
 			<h2>経歴</h2>
