--- a/japanese.html
+++ b/japanese.html
@@ -261,10 +261,10 @@
 			<div class="pubrow">
 				<span class="pub-authors">鳥飼将雅</span>
 				<span class="pub-year">(2020年)</span>
-				<a class="pub-title" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank" rel="noopener">
+				<a class="pub-title" href="https://doi.org/10.5823/jarees.2020.144" target="_blank" rel="noopener">
 					「アウトサイダーの増加とそのペナルティ: ロシアの知事人事の変化とその選挙動員への影響，1991–2019年」
 				</a>
-				<span class="pub-venue"><b>『ロシア・東欧研究』</b>，第49号，144–166頁．</span>
+				<span class="pub-venue"><b>『ロシア・東欧研究』</b>第49号，144–166頁．</span>
 			</div>
 		
 			<button class="accordion" type="button" aria-expanded="false">
@@ -281,10 +281,10 @@
 		<div class="pubrow">
 			<span class="pub-authors">鳥飼将雅</span>
 			<span class="pub-year">(2018年)</span>
-			<a class="pub-title" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank" rel="noopener">
+			<a class="pub-title" href="https://doi.org/10.5823/jarees.2018.98" target="_blank" rel="noopener">
 				「跋扈するクラン政治から垂直的権力の形成へ: ダゲスタンの共和国政府-市郡政府の関係の変遷」
 			</a>
-			<span class="pub-venue"><b>『ロシア・東欧研究』</b>，第47号，98–116頁．</span>
+			<span class="pub-venue"><b>『ロシア・東欧研究』</b>第47号，98–116頁．</span>
 		</div>
 	
 		<button class="accordion" type="button" aria-expanded="false">
@@ -301,10 +301,10 @@
 	<div class="pubrow">
 		<span class="pub-authors">鳥飼将雅</span>
 		<span class="pub-year">(2018年)</span>
-		<a class="pub-title" href="https://doi.org/10.1080/15387216.2021.1996255" target="_blank" rel="noopener">
+		<a class="pub-title" href="https://src-h.slav.hokudai.ac.jp/publictn/slavic-studies/65/Torikai%20Masatomo.pdf" target="_blank" rel="noopener">
 			「全てのウクライナ人はオレンジだったのか? 2004年ウクライナ大統領選における政治マシーンと東西亀裂」
 		</a>
-		<span class="pub-venue"><b>『スラヴ研究』</b>，第65号，1–38頁．</span>
+		<span class="pub-venue"><b>『スラヴ研究』</b>第65号，1–38頁．</span>
 	</div>
 
 	<button class="accordion" type="button" aria-expanded="false">
@@ -321,18 +321,18 @@
 
 		<section class="section" id="others">
 			<h2>その他</h2>
-			<ol class="jp-publist">
-				<li>
-					<p class="jp-pub-head">
-						<a href="#" target="_blank" rel="noopener">“Local political processes in Ukraine behind the war:
-							The security risk of expanding Russian influence on the ground.”</a>
-						<span class="muted">Forum for Ukrainian Studies, June 2022.</span>
-					</p>
-				</li>
+			<ol class="jp-publist" reversed>
 				<li>
 					<p class="jp-pub-head">
 						<a href="#" target="_blank" rel="noopener">「戦争と「平和な」選挙？開戦後の地方統治と2023年地方選挙」</a>
 						<span class="muted">国際問題研究所 研究レポート，2024年1月.</span>
+					</p>
+				</li>
+				<li>
+					<p class="jp-pub-head">
+						<a href="#" target="_blank" rel="noopener">“Local political processes in Ukraine behind the war:
+							The security risk of expanding Russian influence on the ground.”</a>
+						<span class="muted"><em>Forum for Ukrainian Studies</em>, June 2022.</span>
 					</p>
 				</li>
 			</ol>
