--- a/research.html
+++ b/research.html
@@ -234,7 +234,7 @@
 	
 			</a>
 			<span class="pub-authors">(with Aburamoto Mari)</span>.
-			<span class="muted">Revised and Resubmit at <em>Comparative Politics</em>.</span>
+			<span class="muted">Invited to R&R at <em>Comparative Politics</em>.</span>
 		</div>
 	
 		<button class="accordion" type="button" aria-expanded="false">
@@ -284,7 +284,7 @@
 					Cadre Control and Coercion: How Centralized Appointments of Subnational Officials Intensify Judicial Repression.
 				</a>
 				<span class="pub-authors">(with Olimpieva Evgenia)</span>.
-				<span class="muted">Revised and Resubmit at <em>Comparative Politics</em>.</span>
+				<span class="muted">Invited to R&R at <em>Comparative Politics</em>.</span>
 			</div>
 		
 			<button class="accordion" type="button" aria-expanded="false">
@@ -312,7 +312,7 @@
 							<a class="pub-title" href="http://dx.doi.org/10.2139/ssrn.5229812" target="_blank" rel="noopener">
 								The Electoral Trade-Off for Renomination of Former Regime Affiliates.
 							</a>
-							<span class="muted">Revised and Resubmit at <em>Electoral Studies</em>.</span>
+							<span class="muted">Invited to R&R at <em>Electoral Studies</em>.</span>
 						</div>
 					
 						<button class="accordion" type="button" aria-expanded="false">
