--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 				<ul class="nav">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="research.html" aria-current="page">Research</a></li>
-					<li><a href="book-project.html">Book Project</a></li>
+					<li><a href="book_project.html">Book Project</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="japanese.html">日本語</a></li>
 				</ul>
