--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<ul class="nav">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="research.html">Research</a></li>
-					<li><a href="book-project.html">Book Project</a></li>
+					<li><a href="book_project.html">Book Project</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="japanese.html">日本語</a></li>
 				</ul>
