--- a/book_project.html
+++ b/book_project.html
@@ -70,7 +70,7 @@
         <aside class="bp-media" aria-label="Illustration">
           <figure class="bp-figure">
             <img
-              src="images/bookproject-photo.jpg"
+              src="edim_rossiyu.jpg"
               alt="Campaign poster with a modified United Russia logo"
               class="bp-image"
               loading="lazy"
