--- a/japanese.html
+++ b/japanese.html
@@ -292,7 +292,7 @@
 								    </button>
 		<div class="panel">
 			<p>
-				本研究は、2000年以降の中央集権化改革によってロシアにおける中央の地域統制が強化されたとされる一方、近年顕在化している地域的不安定の要因を「アウトサイダー知事」の増加に求める。1991～2019年の全知事に関する独自データを用い、アウトサイダー登用の時系列的変化とその政治的帰結を検証する。エリツィン期には任免権が中央にあったものの、地域社会に根差さない知事の派遣は限定的であった。プーチン政権下で中央優位が確立し、2004年の事実上の任命制導入後も当初は例外的であったが、2007年以降、統一ロシアの優勢とメドヴェージェフ政権の成立を契機に、中央に忠実なアウトサイダーへの交代が加速した。その結果、中央は地域政治をより強く統制できるようになった一方、地域エリートの不満や抗議を招き、選挙での動員力の低下をもたらした。OLSおよび逆確率重み付け推定の結果、アウトサイダー知事は地元出身知事に比べ得票を十分に動員できないことが示され、制度変更後も中央―地方関係はなお流動的であることが明らかとなった。
+				本稿は、ソ連崩壊以降注目を集めてきたロシア地域政治研究の中でも、これまで十分に分析されてこなかった北コーカサスの民族共和国ダゲスタンに焦点を当てる。現地報道やインタビュー調査をもとに、第一に、民族間の権力配分を前提とするコンソシエーショナルな統治構造が、法制度上の制約が弱まった後も非公式に維持されていることを示す。他方で、市町村レベルでは多様なエリートが自立的に行動しており、州政府との関係は不安定である。第二に、連邦選挙では高投票率と与党支持が観察される一方、市長選では激しい競争が見られ、選挙動員は州政府ではなく氏族集団によって担われていることを明らかにする。これは従来のロシア型政治マシーン論の修正を促す。第三に、中央から派遣されたアブドゥラティポフやヴァシリエフによる「権力の垂直」構築の試みを検討し、その成果が限定的であることを示す。本研究は、中央集権化が進むロシアにおいても地域別事例研究の重要性を提起する。
 			</p>
 		</div>
 	</li>
@@ -312,7 +312,7 @@
 								    </button>
 	<div class="panel">
 		<p>
-			本研究は、2000年以降の中央集権化改革によってロシアにおける中央の地域統制が強化されたとされる一方、近年顕在化している地域的不安定の要因を「アウトサイダー知事」の増加に求める。1991～2019年の全知事に関する独自データを用い、アウトサイダー登用の時系列的変化とその政治的帰結を検証する。エリツィン期には任免権が中央にあったものの、地域社会に根差さない知事の派遣は限定的であった。プーチン政権下で中央優位が確立し、2004年の事実上の任命制導入後も当初は例外的であったが、2007年以降、統一ロシアの優勢とメドヴェージェフ政権の成立を契機に、中央に忠実なアウトサイダーへの交代が加速した。その結果、中央は地域政治をより強く統制できるようになった一方、地域エリートの不満や抗議を招き、選挙での動員力の低下をもたらした。OLSおよび逆確率重み付け推定の結果、アウトサイダー知事は地元出身知事に比べ得票を十分に動員できないことが示され、制度変更後も中央―地方関係はなお流動的であることが明らかとなった。
+			本稿は、権威主義体制下の選挙地理を有権者の民族・言語などのアイデンティティではなく、地域エリートの動員能力から説明する。2004年ウクライナ大統領選を事例に、従来強調されてきた東西分断は地域間の差異を説明できても、地域内の得票差までは十分に説明できないことを示す。ドニプロペトロウシク州とヘルソン州の比較分析から、①地域エリートの結束度と②有権者のエリートからの自律性が選挙結果を左右することを明らかにした。前者が高い地域では政治マシーンが有効に機能し与党候補を大差で勝利させるが、エリートが分裂している場合は動員が弱まる。後者が高い地域では住民が威圧から逃れ野党支持を示しやすい。さらに、人事交代頻度や中小企業生産性を指標とする計量分析も、エリート統制の弱さや住民の経済的自立が野党得票を高めることを示した。以上より、権威主義下では地域政治マシーンの強弱こそが選挙地理を規定することを明らかにする。
 		</p>
 	</div>
 </li>
