--- a/book_project.html
+++ b/book_project.html
@@ -25,7 +25,7 @@
       <nav aria-label="Site">
         <ul class="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#research">Research</a></li>
+          <li><a href="research.html">Research</a></li>
           <li><a class="is-active" href="book-project.html">Book Project</a></li>
           <li><a href="japanese.html">日本語</a></li>
           <li><a href="contact.html">Contact</a></li>
