--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <!-- Font Awesome (generic icons like file/CV/mail) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="canonical" href="https://mtori.github.io/" />
 </head>
 
 <body>
