--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
 <!-- Font Awesome (generic icons like file/CV/mail) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="canonical" href="https://mtori.github.io/" />
+<meta name="description" content="Masatomo Torikai, Associate Professor at Osaka University. Research on authoritarian politics, subnational governance, Russia and Ukraine.">
+  <!-- Structured data -->
+  <script type="application/ld+json">
+  {
+   "@context":"https://schema.org",
+   "@type":"Person",
+   "name":"Masatomo Torikai",
+   "affiliation":{
+     "@type":"Organization",
+     "name":"Osaka University"
+   },
+   "url":"https://mtori.github.io/",
+   "sameAs":[
+     "https://scholar.google.com/citations?user=5gBqi98AAAAJ&hl=en",
+     "https://orcid.org/"
+   ]
+  }
+  </script>
 </head>
 
 <body>
