--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<section class="hero">
 			<div class="hero-inner">
 
-				<img src="photo_main.JPG"
+				<img src="photo_main_new.jpg"
          			alt="Masatomo Torikai"
          			class="hero-photo" />
 
