--- a/japanese.html
+++ b/japanese.html
@@ -72,7 +72,7 @@
 				<div class="timeline-item">
 					<div class="timeline-year">2014</div>
 					<div class="timeline-content">
-						東京大学法学部第三類（政治コース）卒業
+						東京大学法学部第三類(政治コース)卒業
 					</div>
 				</div>
 		
@@ -86,14 +86,14 @@
 				<div class="timeline-item">
 					<div class="timeline-year">2021</div>
 					<div class="timeline-content">
-						博士（法学）取得
+						同研究科から博士(法学)取得
 					</div>
 				</div>
 		
 				<div class="timeline-item">
 					<div class="timeline-year">2021–2022</div>
 					<div class="timeline-content">
-						日本学術振興会特別研究員PD（慶應義塾大学）
+						日本学術振興会特別研究員PD
 					</div>
 				</div>
 		
@@ -110,10 +110,10 @@
 		<section class="section" id="interests">
 			<h2>研究関心</h2>
 			<ul class="bullets">
-				<li>旧ソ連圏の国（特にロシア、ウクライナ、モルドヴァ）を対象に国内政治の分析を行っています。</li>
-				<li>比較政治学のアプローチをとり、権威主義体制における政党、選挙動員、中央地方関係などに関心があります。</li>
-				<li>フィールドワーク（専門家・エリートへのインタビュー、現地資料の収集）にもとづく定性分析と、選挙結果・人事データ等を用いた定量分析の経験があります。</li>
-				<li>ロシアの知事／大都市市長、ウクライナの知事人事データなどを構築しています。データに関心がある方はご連絡ください。</li>
+				<li>旧ソ連圏の国(特にロシア，ウクライナ，モルドヴァ)を対象に国内政治の分析を行っています．</li>
+				<li>比較政治学のアプローチをとります．権威主義体制における政党，選挙動員，中央地方関係などに関心があります．</li>
+				<li>フィールドワーク(専門家・エリートへのインタビュー，現地資料の収集)にもとづく定性分析と，選挙結果・人事データ等を用いた定量分析の経験があります．</li>
+				<li>ロシアの知事／大都市市長，ウクライナの知事人事データなどを構築しています．データに関心がある方はご連絡ください．</li>
 			</ul>
 		</section>
 
@@ -183,7 +183,7 @@
 							    </button>
 					<div class="panel">
 						<p>
-							権威主義的指導者は、政権を固めるため、主要な地方ポストを国家官僚機構に組み込む。本研究は、ロシアの知事の在職後の経歴に関する包括的なデータセットを活用し、プーチン大統領の中央集権化改革の下で、知事が連邦政府の裁量で職を離れることを実証する。2010年代には、退任する知事が頻繁に刑事訴追に直面した。同時に、知事の連邦政府ポストへの昇進が増加し、厳格な統制と昇進を組み合わせることで、地域ポストが連邦行政機構に組み込まれてきた。
+							権威主義的指導者は，政権を固めるため，主要な地方ポストを国家官僚機構に組み込む．本研究は，ロシアの知事の在職後の経歴に関する包括的なデータセットを活用し，プーチン大統領の中央集権化改革の下で，知事の退任が連邦政府の裁量で行われるようになってきたことを実証する．2010年代には，退任する知事が頻繁に刑事訴追に直面した．同時に，知事の連邦政府ポストへの昇進が増加し，厳格な統制と昇進を組み合わせることで，地域ポストが連邦行政機構に組み込まれてきた．
 						</p>
 					</div>
 				</li>
@@ -204,7 +204,7 @@
 					    </button>
 					<div class="panel">
 						<p>
-							ウクライナの2020年地方選挙は、地域政党の急増を通じて政党システムの急激な変容を示した。既存の研究は政党システムの漸進的な全国化を検証してきたが、現代ウクライナで観察される政党システムの急速な地域化についてはほとんど議論されていない。本研究は、2010年代の政治プロセスに関する質的証拠と、2010年・2015年・2020年のウクライナ地方選挙結果のデータ分析による量的証拠を組み合わせ、政党システムの地方化がユーロマイダン後に急速に権力を蓄積した有力な市長たちによって引き起こされたことを実証する。この市長権限の増大には主に三つの原因がある。第一に、市長の直接選挙や国家構造における市当局の相対的自治といった制度的枠組みが、知事などの他の地域アクターとは異なる独自の権限を市長に付与している。第二に、ユーロマイダン後に開始された地方分権改革が市長と市当局の権限を強化した。最後に、ウォロディミル・ゼレンスキーによる知事の登用パターンと、彼の政党「国民の僕」の候補者選定プロセスが、市長が地域的な権力基盤を構築することを可能にした。本研究は、パトロナリズムの地理的断片化を示すことで、パトロナリズムの概念に対する重要な示唆を提供する。
+							ウクライナの2020年地方選挙では，地域政党が急増し，政党システムが急激に変容した．比較政治学の先行研究は政党システムの漸進的な全国化を検証してきたが，現代ウクライナで観察される政党システムの急速な地域化についてはほとんど議論されていない．本研究は，2010年代の政治過程に関する定性分析と，2010年・2015年・2020年のウクライナ地方選挙結果の定量分析を組み合わせ，政党システムの地方化がユーロマイダン後に急速に権力を拡大した有力市長たちによって引き起こされたことを実証する．この市長権限の増大には主に三つの原因がある．第一に，市長の公選制や市当局の相対的な自治の大きさといった制度的枠組みが，知事などの他の地域アクターとは異なる独自の権限を市長に付与している．第二に，ユーロマイダン後に開始された地方分権改革が市長と市当局の権限を強化した．最後に，ヴォロディムィル・ゼレンシキー大統領による知事の登用パターンと，彼の政党「人民の僕」の候補者選定プロセスが，市長が地域的な権力基盤を構築することを可能にした．本研究は，パトローナリズムの地理的断片化を示すことで，パトローナリズム概念に対する重要な示唆を与える．
 						</p>
 					</div>
 				</li>
@@ -225,7 +225,7 @@
 			    </button>
 					<div class="panel">
 						<p>
-							近年、権威主義的な後継政党に関する学術的研究が盛んに行われているが、既存の研究の大半は、打倒された体制の元エリート幹部の生存パターンを実証的に検証していない。本研究は、権威主義体制崩壊後の選挙において、旧与党メンバーがどのような条件下で生き残るかを考察する。ウクライナの全国議会現職議員450名と地方議会現職議員2869名に関する包括的データを活用し、崩壊した与党「地域党（PoR）」の元党員たちの存続を検証した。その結果、個人資源を有する元PoR議員（例えば小選挙区制で当選した議員）ほど、その後の選挙で議席を確保する可能性が高いことが明らかになった。さらに、元PoR議員の政党所属においては、政治プログラムやイデオロギーよりも選挙戦略が優先された。これらの知見は、権威主義的与党の元構成員にとって、政治的生存において個人の資源が重要であることを浮き彫りにしている。
+							近年，権威主義的後継政党に関する学術的研究が盛んに行われているが，既存の研究の大半は，打倒された支配党の元党員の生存パターンを実証的に検証していない．本研究は，権威主義体制崩壊後の選挙において，旧支配党メンバーがどのような条件下で生き残るかを考察する．ウクライナの全国議会現職議員450名と地方議会現職議員2869名に関する包括的データを活用し，崩壊した与党「地域党」の元党員たちの地域党政権崩壊後の選挙行動・選挙結果を検証した．その結果，個人資源を有する元地域党議員(例えば小選挙区制で当選した議員)ほど，その後の選挙で議席を確保する可能性が高いことが明らかになった．さらに，元地域党議員の政党帰属を分析すると，政治プログラムやイデオロギーよりも選挙戦略が優先された．これらの知見は，権威主義的与党の元構成員にとって，政治的生存において個人の資源が重要であることを浮き彫りにしている．
 						</p>
 					</div>
 				</li>
@@ -247,7 +247,7 @@
 			    </button>
 					<div class="panel">
 						<p>
-							権威主義的統治者は、どのような方法と条件下で国家機構を活用し勝利を確実なものとするのか？本稿はこの問いに答えるため、ハイブリッド体制における知事任命の根拠としての選挙動員を検証する。行政資源を絶対的に支配する権威主義的統治者は、有権者を自陣営へ動員する能力に優れた知事を好む。しかし、いくつかの状況下ではこの戦略は最適とは言えず、あるいは不可能となる。本論を実証的に裏付けるため、1996年から2017年までのウクライナにおける知事任命・解任の独自データを用いた生存分析を実施する。結果は、レオニード・クチマ大統領時代において選挙実績が知事任命の主要な決定要因であったことを裏付ける。さらに、政党勢力、中央政府内における統治者の弱体な権威、地域分断といった様々な制度的条件が、後任大統領による異なる任命戦略の採用につながったことを実証している。
+							権威主義的統治者は，どのような条件下で，そしてどのような方法で国家機構を活用し，選挙での勝利を確実なものとするのか? 本稿はこの問いに答えるため，混合体制における選挙動員を基盤とした知事任命のパターンについて検証する．行政資源を支配する権威主義体制の指導者は，有権者を自陣営へ動員する能力に優れた知事を好む．しかし，いくつかの状況下ではこの戦略は最適とは言えないか，あるいは取ることができなくなる．本論を実証的に裏付けるため，1996年から2017年までのウクライナにおける知事任命・解任の独自データを用いた生存分析を行う．分析結果は，レオニード・クチマ大統領時代において選挙実績が知事任命の主要な決定要因であったことを裏付ける．さらに，支配党の強さ，中央政府内における統治者の権威の強さ，地域分断といった様々な制度的条件が，後任大統領による異なる任命戦略の採用につながったことを示した．
 						</p>
 					</div>
 				</li>
@@ -272,7 +272,7 @@
 							    </button>
 			<div class="panel">
 				<p>
-					本研究は、2000年以降の中央集権化改革によってロシアにおける中央の地域統制が強化されたとされる一方、近年顕在化している地域的不安定の要因を「アウトサイダー知事」の増加に求める。1991～2019年の全知事に関する独自データを用い、アウトサイダー登用の時系列的変化とその政治的帰結を検証する。エリツィン期には任免権が中央にあったものの、地域社会に根差さない知事の派遣は限定的であった。プーチン政権下で中央優位が確立し、2004年の事実上の任命制導入後も当初は例外的であったが、2007年以降、統一ロシアの優勢とメドヴェージェフ政権の成立を契機に、中央に忠実なアウトサイダーへの交代が加速した。その結果、中央は地域政治をより強く統制できるようになった一方、地域エリートの不満や抗議を招き、選挙での動員力の低下をもたらした。OLSおよび逆確率重み付け推定の結果、アウトサイダー知事は地元出身知事に比べ得票を十分に動員できないことが示され、制度変更後も中央―地方関係はなお流動的であることが明らかとなった。
+					2000年以降の中央集権化改革によってロシアにおける中央の地域統制が強化されたとされてきた．一方で，しばしば地方政治の不安定化の事例も報告されている．本研究は，この要因を「アウトサイダー知事」の増加に求める．1991–2019年の全知事に関する独自データを用い，アウトサイダー登用の時系列的変化とその政治的帰結を検証する．ボリス・エリツィン期には任免権が中央にあった時でも，地域社会に根差さない知事の派遣は限定的であった．1996年以降は知事は公選で選出されるようになり，連邦政府から自律的な立場をとる知事はますます増えていった．ヴラディミル・プーチン政権下で中央優位が確立し，2004年の事実上の知事任命制導入後も，当初はアウトサイダー知事は例外的であった．だが2007年以降，与党統一ロシアの支配の確立とドミトリー・メドヴェージェフ政権の成立を契機に，中央に忠実なアウトサイダーへの交代が加速した．その結果，中央は地域政治をより強く統制できるようになった一方，地方エリートの不満や抗議を招き，選挙での動員力の低下をもたらした．OLSおよび逆確率重み付け推定の結果，アウトサイダー知事は地元出身知事に比べ得票を十分に動員できないことが示され，制度変更後も中央―地方関係はなお流動的であることが明らかとなった．
 				</p>
 			</div>
 		</li>
@@ -292,7 +292,7 @@
 								    </button>
 		<div class="panel">
 			<p>
-				本稿は、ソ連崩壊以降注目を集めてきたロシア地域政治研究の中でも、これまで十分に分析されてこなかった北コーカサスの民族共和国ダゲスタンに焦点を当てる。現地報道やインタビュー調査をもとに、第一に、民族間の権力配分を前提とするコンソシエーショナルな統治構造が、法制度上の制約が弱まった後も非公式に維持されていることを示す。他方で、市町村レベルでは多様なエリートが自立的に行動しており、州政府との関係は不安定である。第二に、連邦選挙では高投票率と与党支持が観察される一方、市長選では激しい競争が見られ、選挙動員は州政府ではなく氏族集団によって担われていることを明らかにする。これは従来のロシア型政治マシーン論の修正を促す。第三に、中央から派遣されたアブドゥラティポフやヴァシリエフによる「権力の垂直」構築の試みを検討し、その成果が限定的であることを示す。本研究は、中央集権化が進むロシアにおいても地域別事例研究の重要性を提起する。
+				ソ連解体以降注目を集めてきたロシア地方政治研究の中でも，北カフカースの民族共和国ダゲスタンはこれまで十分に分析されてこなかった．本稿は，現地報道やインタビュー調査をもとに，ダゲスタン政治の特殊性と，近年の中央集権化の高まりの中での変化について分析する．第一に，民族間の権力配分を前提とする多極共存型統治構造が，法制度上の制約が弱まった後も非公式に維持されていることを示す．他方で，市郡レベルでは多様なエリートが自立的に行動しており，共和国政府との関係は不安定だった．第二に，連邦選挙では高投票率と与党支持が観察される一方，市長選では激しい競争が見られ，選挙動員は共和国政府ではなく市郡を基盤としたクランによって担われていることを明らかにする．この発見は，従来のロシア型政治マシーン論の修正を促す．第三に，中央から派遣されたラマザン・アブドゥラティポフ知事やヴラディミル・ヴァシリエフ知事による「権力の垂直」構築の試みを検討し，その成果が限定的であることを示す．本研究は，中央集権化が進むロシアにおいても地域別事例研究の重要性を提起する．
 			</p>
 		</div>
 	</li>
@@ -312,7 +312,7 @@
 								    </button>
 	<div class="panel">
 		<p>
-			本稿は、権威主義体制下の選挙地理を有権者の民族・言語などのアイデンティティではなく、地域エリートの動員能力から説明する。2004年ウクライナ大統領選を事例に、従来強調されてきた東西分断は地域間の差異を説明できても、地域内の得票差までは十分に説明できないことを示す。ドニプロペトロウシク州とヘルソン州の比較分析から、①地域エリートの結束度と②有権者のエリートからの自律性が選挙結果を左右することを明らかにした。前者が高い地域では政治マシーンが有効に機能し与党候補を大差で勝利させるが、エリートが分裂している場合は動員が弱まる。後者が高い地域では住民が威圧から逃れ野党支持を示しやすい。さらに、人事交代頻度や中小企業生産性を指標とする計量分析も、エリート統制の弱さや住民の経済的自立が野党得票を高めることを示した。以上より、権威主義下では地域政治マシーンの強弱こそが選挙地理を規定することを明らかにする。
+			ウクライナの選挙では従来，有権者の民族・言語の違いに基づく東西の亀裂の重要性が強調されてきた．本稿は，権威主義体制下の選挙動員という視角を用いて，地方エリートの動員能力の差からこの東西亀裂を説明する．2004年ウクライナ大統領選の選挙区レベルの結果を用いた計量分析により，従来強調されてきた民族・言語などの要素は，地方間の差異を説明できても，地方内の得票差までは十分に説明できないことを示す．ドニプロペトロウシク州とヘルソン州の定性比較分析から、(1)地域エリートの結束度と(2)有権者のエリートからの自律性が選挙結果を左右することを明らかにした．前者が高い地方では政治マシーンが有効に機能し与党候補を大差で勝利させる．後者が高い地方では住民が威圧から逃れ野党支持を示しやすい．さらにこの発見がウクライナ全土に適用可能か確かめるために，人事交代頻度や中小企業生産性を独立変数として，選挙結果を結果変数とする計量分析を行なった．その結果，エリート統制の弱さや住民の経済的自立性が野党候補の得票を高めることが示された．以上より，権威主義下では地域政治マシーンの強弱こそが選挙地理を規定することを明らかにする．
 		</p>
 	</div>
 </li>
@@ -330,8 +330,8 @@
 				</li>
 				<li>
 					<p class="jp-pub-head">
-						<a href="#" target="_blank" rel="noopener">“Local political processes in Ukraine behind the war:
-							The security risk of expanding Russian influence on the ground.”</a>
+						<a href="#" target="_blank" rel="noopener">“Local Political Processes in Ukraine behind the War:
+							The Security Risk of Expanding Russian Influence on the Ground.”</a>
 						<span class="muted"><em>Forum for Ukrainian Studies</em>, June 2022.</span>
 					</p>
 				</li>
